--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -114,9 +114,9 @@ jobs:
                 no_output_timeout: 30m
                 command: node_modules/.bin/rp-solidity-coverage
             # Upload results
-            # - run:
-            #    name: Upload coverage to coveralls
-            #   command: cat coverage/lcov.info | node_modules/.bin/coveralls
+            - run:
+                name: Upload coverage to coveralls
+                command: cat coverage/lcov.info | node_modules/.bin/coveralls
             # Save artifacts
             - store_artifacts:
                 path: coverage
